# research-skills

./: LICENSE  README.md
academic-figure-zh/: SKILL.md
academic-writing-zh/: SKILL.md
arxiv-visual-sprint/: REFERENCE.md  SKILL.md  download_pdfs.py  pyproject.toml
arxiv-visual-sprint/scripts/: fetch_arxiv.py  generate_visual_abstract.py  search_embodied.py  setup_workspace.py  temp_search.py  test_gemini.py  validate_image.py
git-commit-zh/: SKILL.md
skill-creator-zh/: SKILL.md
task-decomposition-zh/: SKILL.md
