[project]
name = "arxiv-visual-sprint"
version = "0.1.0"
description = "45-minute arXiv visual abstract sprint tool with topic expansion"
readme = "SKILL.md"
requires-python = ">=3.9"
dependencies = [
    "arxiv>=2.4.1",
    "google-genai>=0.3.0",
    "google-generativeai>=0.8.6",
    "pillow>=10.0.0",
    "pydantic>=2.12.5",
    "pypdf>=3.0.0",
    "requests>=2.32.0",
]

[tool.uv]
managed = true
